[metadata]
name = topmodel
description = validate molecular structure models
author = Janik Kokot
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 1.0.1

[options]
packages = topmodel, topmodel.util, topmodel.check
install_requires = 
    Click
    colorama
    biopython
    mmtf-python
    scipy
    mendeleev
python_requires = >=3.8
package_dir = =src

[options.entry_points]
console_scripts = 
    topmodel = topmodel.app:main

[options.extras_require]
testing =
        pytest>=6.0
        pytest-cov>=2.0
        mypy>=0.910
        flake8>=3.9
        tox>=3.24

[option.spackage_data]
topmodel = py.typed
topmodel.util = py.typed
topmodel.check = py.typed

[flake8]
max-line-length = 100
per-file-ignores = __init__.py:F401
